test: pty05 -- Add testing of multiple devpts instance
Signed-off-by: Cyrill Gorcunov <gorcunov@openvz.org>

--- a/test/zdtm/static/Makefile
+++ b/test/zdtm/static/Makefile
@@ -340,6 +340,7 @@ TST_DIR		=				\
 		shared_slave_mount_children	\
 		non_uniform_share_propagation	\
 		private_bind_propagation	\
+		pty05				\
 
 TST_DIR_FILE	=				\
 		chroot				\
